discussion/kv_engine/167838/167838_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Track disk read/written during seq tree mergesort (kv_engine)

Change-Id: Ia04d19a2a85065bb4fcfcf269f3a330dacfab261

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-12-17 15:57:49.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-17 16:01:11.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14585/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-fs-stats.h:68:70: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    void account_bytes_read(couch_file_handle handle, size_t nbytes) override;
                                                                     ^~~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-fs-stats.h:70:47: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
                               size_t nbytes) override;
                                              ^~~~~~~~

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14585/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-fs-stats.h:68:70:
error: only virtual member functions can be marked "override" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14585/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13415/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-10 12:35:25.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
